2006-08-08  Thiemo Seufer  <ths@mips.com>

	* breakpoint.c (update_breakpoints_after_exec): Fix type mismatch.

2006-08-08  Vladimir Prus  <vladimir@codesourcery.com>

	* symfile.c (download_write_size): Remove.
	(show_download_write_size): Remove.
	(load_section_callback): Don't use download_write_size.
	(_initialize_symfile): Don't register download_write_size.
	* NEWS: Mention 'download-write-size' removal.

2006-08-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* expprint.c (print_subexp_standard, dump_subexp_body_standard): Add
	support for member pointers.

2006-08-02  Mark Kettenis  <kettenis@gnu.org>

	* arm-tdep.h: Add multiple inclusion protection.
	(struct gdbarch): Add forward declaration.
	(armobsd_regset_from_core_section): New prototype.
	* armbsd-tdep.c: New file.
	* armobsd-tdep.c: Include "gdb_string.h".
	(armobsd_init_abi): Set regset_from_core_section.
	(armobsd_core_osabi_sniffer): New function.
	(_initialize_armobsd_tdep): Register armobsd_core_osabi_sniffer.
	* Makefile.in (ALLDEPFILES): Add armbsd-tdep.c.
	(armbsd-tdep.o): New dependency.
	(armnbsd-tdep.o): Update dependencies.
	* config/arm/obsd.mt (TDEPFILES): Add armbsd-tdep.o and corelow.o.

2006-08-02  Thiemo Seufer  <ths@mips.com>

	* linux-thread-db.c (thread_db_get_thread_local_address): Fix type
	mismatch.
	* tui/tui-stack.c (tui_show_frame_info): Likewise.

2006-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* c-exp.y (type): Remove incorrect pointer to member case.
	* objc-exp.y (type): Likewise.
	* p-exp.y (type): Likewise.

2006-08-01  Mark Kettenis  <kettenis@gnu.org>

	* arm-tdep.h (enum struct_return): New.
	(struct gdbarch_tdep): Add struct_return member.
	* arm-tdep.c (arm_return_value): Return
	RETURN_VALUE_STRUCT_CONVENTION for aggregates when the ABI uses
	pcc_struct_return.
	(arm_gdbarch_init): Default to reg_struct_return.
	* armobsd-tdep.c (armobsd_init_abi): Set pcc_struct_return.

2006-07-31  Mark Kettenis  <kettenis@gnu.org>
